# navigation-gs

./: .gitignore  .gitmodules  all_kill.sh  requirement.sh  status.bkp
Simulation/gazebo_sim/: CMakeLists.txt  package.xml
Simulation/gazebo_sim/config/: basic_params.yaml  display_robot_model.rviz  nav.rviz  nav_mppi.rviz
Simulation/gazebo_sim/include/: map_to_odom.hpp
Simulation/gazebo_sim/launch/: bringup_basic.launch.py  bringup_robot.launch.py  bringup_robot_namespace.launch.py  bringup_sim.launch.py  display_robot.launch.py  nav_sim.launch.py  navigation_launch.py  point_cloud_transform.launch.py  terrain.launch.py
Simulation/gazebo_sim/map/: rmuc2024.pgm  rmuc2024.yaml
Simulation/gazebo_sim/src/: cmd_vel_interface.cpp  gazebo_sim.cpp  map_to_odom.cpp
Simulation/gazebo_sim/urdf/robot/: car_base.urdf.xacro  property.xacro  robot.urdf.xacro
Simulation/gazebo_sim/urdf/robot/plugins/: gazebo_control_plugin.xacro  gazebo_control_plugin_prefix.xacro
Simulation/gazebo_sim/urdf/robot/sensor/: camera.urdf.xacro  laser.urdf.xacro  velodyne.urdf.xacro
Simulation/gazebo_sim/world/: RMUC2024.world
Simulation/terrain_analysis/: CMakeLists.txt
Simulation/terrain_analysis/src/: terrainAnalysis.cpp  terrainAnalysisExt.cpp
Simulation/velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro  VLP-16.urdf_old.xacro
controller_interfaces/: CMakeLists.txt  package.xml
controller_interfaces/srv/: CustomControllerQuery.srv  SetGoalPose.srv  SetInitialPath.srv
nav_bringup/: CMakeLists.txt  package.xml
nav_bringup/config/: nav2_params.yaml  nav2_params_new.yaml  nav2_params_old.yaml
nav_bringup/config/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
nav_bringup/launch/: bringup.launch.py  localization.launch.py  navigation_launch.py
nav_top_sdk/: .gitignore  README.md  package.xml  setup.cfg  setup.py
nav_top_sdk/launch/: bringup.launch.py
nav_top_sdk/nav_top_sdk/: sdk_node.py
nav_top_sdk/nav_top_sdk/api/: navigation_api.py
nav_top_sdk/nav_top_sdk/controller/: navigation_controller.py
nav_top_sdk/nav_top_sdk/models/: models.py
nav_top_sdk/nav_top_sdk/nav_domain/: base_client.py  ros2_client.py  ros2_navigation_service.py  utils.py
nav_top_sdk/nav_top_sdk/request_model/: base_request.py
navigation_switch/: package.xml  setup.cfg  setup.py
navigation_switch/navigation_switch/: navigation_switch_node.py
neupan_controller/: CMakeLists.txt  README.md  neupan_controller.xml  package.xml  setup.cfg  setup.py  test_cmd.txt
neupan_controller/config/: neupan_planner.yaml
neupan_controller/include/neupan_controller/: neupan_controller.hpp  parameter_handler.hpp  path_handler.hpp
neupan_controller/launch/: neupan.launch.py
neupan_controller/neupan_controller/: neupan_core.py  neupan_node
neupan_controller/src/: neupan_controller.cpp  parameter_handler.cpp  path_handler.cpp
pb/pb_nav2_plugins/: CMakeLists.txt
small_gicp_relocalization/: CMakeLists.txt  package.xml
small_gicp_relocalization/include/small_gicp_relocalization/: debouncer.hpp  small_gicp_relocalization.hpp
small_gicp_relocalization/launch/: small_gicp_relocalization_launch.py
small_gicp_relocalization/src/: small_gicp_relocalization.cpp
